azuredeploy.json
{
   "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
   "contentVersion": "1.0.0.0",
   "parameters": 
   {
      "vnetName": 
      {
         "type": "string",
         "defaultValue": "VNet1"
      },
      "frontEndNSGName": 
      {
         "type": "string",
         "defaultValue": "nsg1"
      },
      "backEndNSGName": 
      {
         "type": "string",
         "defaultValue": "nsg2"
      },
      "vnetAddressPrefix": 
      {
         "type": "string",
         "defaultValue": "10.0.0.0/16"
      },
      "subnet1Prefix": 
      {
         "type": "string",
         "defaultValue": "10.0.0.0/24"
      },
      "subnet1Name": 
      {
         "type": "string",
         "defaultValue": "Subnet1"
      },
      "subnet2Prefix": 
      {
         "type": "string",
         "defaultValue": "10.0.1.0/24"
        
      },
      "subnet2Name": 
      {
         "type": "string",
         "defaultValue": "Subnet2"
         
      }
   },
   "variables": 
   {
      "apiVersion": "2015-06-15"
   },
   "resources": 
   [      
      {
         "apiVersion": "[variables('apiVersion')]",
         "type": "Microsoft.Network/virtualNetworks",
         "name": "[parameters('vnetName')]",
         "location": "[resourceGroup().location]",
         "properties": 
         {
            "addressSpace": 
            {
               "addressPrefixes": 
               [
                  "[parameters('vnetAddressPrefix')]"
               ]
            },
            "subnets": 
            [               
               {
                  "name": "[parameters('subnet1Name')]",
                  "properties": 
                  {
                     "addressPrefix": "[parameters('subnet1Prefix')]",
                     "networkSecurityGroup": 
                     {
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('frontEndNSGName'))]"
                     }
                  }
               },               
               {
                  "name": "[parameters('subnet2Name')]",
                  "properties": 
                  {
                     "addressPrefix": "[parameters('subnet2Prefix')]",
                     "networkSecurityGroup": 
                     {
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('backEndNSGName'))]"
                     }
                  }
               }
            ],
            "securityRules": 
            [               
               {
                  "name": "[parameters('frontEndNSGName')]",
                  "properties": 
                  {
                     "description": "Allow RDP",
                     "protocol": "Tcp",
                     "sourcePortRange": "*",
                     "destinationPortRange": "3389",
                     "sourceAddressPrefix": "Internet",
                     "destinationAddressPrefix": "*",
                     "access": "Allow",
                     "priority": 100,
                     "direction": "Inbound"
                  }
               },               
               {
                  "name": "[parameters('backEndNSGName')]",
                  "properties": 
                  {
                     "description": "Allow WEB",
                     "protocol": "Tcp",
                     "sourcePortRange": "*",
                     "destinationPortRange": "80",
                     "sourceAddressPrefix": "Internet",
                     "destinationAddressPrefix": "*",
                     "access": "Allow",
                     "priority": 101,
                     "direction": "Inbound"
                  }
               }
            ]
         }
      }
   ]
}
